--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
 services:
-  mongodb:
+  mongo:
     image: mongo:latest
     container_name: secure-messaging-mongodb
     restart: unless-stopped
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
-      MONGO_INITDB_DATABASE: messaging-app
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
     ports:
       - "27017:27017"
     volumes:
@@ -14,26 +13,28 @@ services:
     networks:
       - app-network
     healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongo localhost:27017/messaging-app --quiet
+      test: ["CMD-SHELL", "mongosh --username $MONGO_INITDB_ROOT_USERNAME --password $MONGO_INITDB_ROOT_PASSWORD --authenticationDatabase admin --quiet --eval 'db.adminCommand({ping:1})' || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
-  
-  redis:
-    image: redis:7-alpine
-    container_name: secure-messaging-redis
+
+  mongo-express:
+    image: mongo-express:latest
+    container_name: mongo-express
     restart: unless-stopped
     ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
+      - "8081:8081"
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_BASICAUTH_ENABLED: true
+      ME_CONFIG_BASICAUTH_USERNAME: admin
+      ME_CONFIG_BASICAUTH_PASSWORD: pass
+    depends_on:
+      - mongo
     networks:
       - app-network
-    healthcheck:
-      test: redis-cli ping
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   backend:
     build:
@@ -42,18 +43,15 @@ services:
     container_name: secure-messaging-backend
     restart: unless-stopped
     ports:
-      - "3001:3000"
+      - "3001:3001"
     environment:
       NODE_ENV: production
-      port: 3000
-      MONGO_URI: mongodb://admin:${MONGO_PASSWORD}@mongodb:27017/messaging-app?authSource=admin
-      REDIS_URI: redis://redis:6379
-      JWT_SECRET: ${JWT_SECRET}
-      FRONTEND_URL: ${FRONTEND_URL}
+      PORT: 3001
+      MONGODB_URI: mongodb://root:example@mongo:27017/messaging-app?authSource=admin
+      JWT_SECRET: your-production-jwt-secret
+      FRONTEND_URL: http://localhost:5173
     depends_on:
-      mongodb:
-        condition: service_healthy
-      redis:
+      mongo:
         condition: service_healthy
     networks:
       - app-network
@@ -62,8 +60,6 @@ services:
 
 volumes:
   mongodb_data:
-    driver: local
-  redis_data:
     driver: local
 
 networks:
