--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,7 @@
     "dev": "nodemon --watch src --ext ts,json --exec \"node --loader ts-node/esm ./src/index.ts\"",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "jest --coverage",
-    "test:watch": "jest --watch",
-    "test:unit": "jest --testPathPattern=tests/unit",
-    "test:integration": "jest --testPathPattern=integration",
-    "test:e2e": "jest --testPathPattern=e2e",
-    "test:coverage": "jest --coverage --coverageReporters=text-lcov"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +21,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.0",
+    "faker": "^6.6.6",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
@@ -37,15 +33,13 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.0",
-    "@types/supertest": "^6.0.3",
-    "jest": "^30.2.0",
+    "jest": "^29.7.0",
     "mongodb-memory-server": "^10.3.0",
     "nodemon": "^3.1.11",
-    "supertest": "^7.1.4",
-    "ts-jest": "^29.4.5",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
