--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.3.0",
     "nodemon": "^3.1.11",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
