--- a/backend/package.json
+++ b/backend/package.json
@@ -23,9 +23,11 @@
     "express-validator": "^7.3.0",
     "faker": "^6.6.6",
     "helmet": "^8.1.0",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "socket.io-redis": "^5.4.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
@@ -36,6 +38,7 @@
     "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.0",
+    "@types/socket.io": "^3.0.1",
     "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.3.0",
